# mini-llm

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  data.py  engine.py  gpu-requirements.txt  hyperparam_tuning.py  main.py  model.py  pyproject.toml  requirements.txt  setup.py  tasks.py  text_completer.py  trainer.py  wiki.ipynb
models/checkpoints/: model_epoch_4.pt  training_metadata.json
models/optuna_checkpoints/trial_0/: training_metadata.json
notebooks/: exp_1_data_randomization.ipynb  plots.ipynb  wiki.ipynb
scripts/: bootstrap.sh  install_requirements.sh  run_tensorboard.py  setup_github_auth.sh  setup_hf.sh
src/: data.py  hyperparam_tuning.py  live_plotter.py  model.py  trainer.py  utils.py
src/text_prediction/: data.py  data_pipeline.py  hyperparam_tuning.py  live_plotter.py  main.py  model.py  model_custom_transformer.py  model_torch_transformer.py  streaming_data_pipeline.py  tokenized_dataset.py  trainer.py  updated_model.py  utils.py
src/text_prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/text_prediction/text_prediction.egg-info/: SOURCES.txt
