[tool.poetry]
name = "wiki-llm"
version = "0.1.0"
description = "A project for training, tuning, and generating text predictions with a custom transformer model."
authors = ["Aadil Bhatti <aadilzbhatti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
transformers = "^4.49.0"
datasets = "^3.4.0"
optuna = "^3.0.0"
tqdm = "^4.67.1"
matplotlib = "^3.5.1"
ipywidgets = "^7.6.5"
pyarrow = "^19.0.1"
tensorboard = "^2.18.0"
torch = {version = "^2.8.0.dev20250326", source = "pytorch-cu128"}
pytorch-triton = {version = "^3.3.0", source = "pytorch-cu128"}

[tool.poetry.scripts]
wiki-llm = "engine:main"

[[tool.poetry.packages]]
include = "text_prediction"
from = "src"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
priority = "explicit"  # Ensures this source is used only when explicitly referenced

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
